# production-rag-system

./: .env.example  .gitignore  README.md  fix_types.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.sh  prometheus.yml
docs/: configuration.md  deployment.md  examples.md  installation.md
examples/: module1_basic_rag.py  module2_hybrid_search.py  module3_production_api.py
src/rag_system/: __init__.py  config.py
src/rag_system/api/: __init__.py  dependencies.py  main.py  routes.py
src/rag_system/core/: __init__.py  document_processor.py  embedding_generator.py  query.py  vector_store.py
src/rag_system/evaluation/: __init__.py  ab_testing.py  quality_gate.py  retrieval_evaluator.py
src/rag_system/infrastructure/: __init__.py  cache.py  logging_config.py  monitoring.py  rate_limiter.py
src/rag_system/retrieval/: __init__.py  base.py  hybrid_retriever.py  reranker.py  smart_retriever.py
src/rag_system/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/unit/: test_document_processor.py  test_hybrid_retriever.py
